# video_stream

./: CMakeLists.txt
cmake/: have_video_stream.cmake  have_video_stream_target.cmake
excepts/: vp_excepts.h
nodes/common/include/: common_pri.h  vp_data_source.h  vp_meta_hookable.h  vp_meta_publisher.h  vp_meta_subscriber.h  vp_node.h  vp_src_node.h  vp_stream_info_hookable.h
nodes/common/src/: vp_meta_publisher.cpp  vp_meta_subscriber.cpp  vp_node.cpp  vp_src_node.cpp
nodes/infer/: vp_process.h
nodes/source/: vp_data_source.cpp  vp_data_source.h  vp_image_data_source.cpp  vp_image_data_source.h
objects/include/: vp_control_meta.h  vp_frame_meta.h  vp_meta.h
objects/src/: vp_control_meta.cpp  vp_frame_meta.cpp  vp_meta.cpp
py/src/: vp_meta_py_wrapper.cpp
python_scripts/: process_frame.py
unit_test/: CMakeLists.txt  main.cpp
utils/: logging.h  pybind_py_caller.h  pybind_vp_meta.h  safe_queue.h  vp_gate.h  vp_semaphore.h  vp_utils.h
utils/src/: pybind_vp_meta.cpp
